fix padding on mobile navbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,7 +10,5 @@ body {
 }
 
 @media screen and (max-width: 375px) {
-  body {
-    padding: 20px;
-  }
+ 
 }
